# ast-outline

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE-DOCS  NOTICE  README.md  README.ru.md  README.zh-CN.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: about.md  agents.md  commands.md  history.md  index.md  output-format.md
scripts/: install.ps1  install.sh
src/ast_outline/: __init__.py  _prompt.py  _setup_prompt.py  cli.py  core.py  grep.py
src/ast_outline/adapters/: __init__.py  _css_base.py  base.py  cpp.py  csharp.py  css.py  go.py  java.py  kotlin.py  lua.py  markdown.py  php.py  python.py  ruby.py  rust.py  scala.py  scss.py  sql.py  typescript.py  yaml.py
src/code_outline/: __init__.py  _prompt.py  cli.py  core.py
src/code_outline/adapters/: __init__.py  base.py  csharp.py  java.py  kotlin.py  markdown.py  python.py  typescript.py
tests/: conftest.py  sample.cs  sample.py
tests/fixtures/cpp/: broken_syntax.cpp  cpp20_features.h  edge_cases.h  impl.cpp  inheritance_complex.h  namespace_with_siblings.h  nested_namespaces.h  operators_and_special.h  operators_full.h  templates_advanced.h  ue_actor.h  widget.h
tests/fixtures/csharp/: broken_syntax.cs  file_scoped_ns.cs  hierarchy.cs  nested_and_overloads.cs  unity_behaviour.cs  visibility_defaults.cs
tests/fixtures/css/: styles.css
tests/fixtures/go/: broken_syntax.go  comments_edge.go  edge_cases.go  enum_iota.go  generics.go  hierarchy.go  no_package_methods.go  user_service.go
tests/fixtures/go/multidir/base/: animal.go
tests/fixtures/go/multidir/felines/: cat.go
tests/fixtures/go/multidir/mammals/: dog.go  puppy.go
tests/fixtures/java/: annotation_type.java  broken_syntax.java  generics_throws.java  hierarchy.java  line_comment.java  multi_var_fields.java  no_package.java  plain_block_comment.java  records_and_sealed.java  repository.java  status_enum.java  user_service.java
tests/fixtures/java/multidir/base/: Animal.java
tests/fixtures/java/multidir/felines/: Cat.java
tests/fixtures/java/multidir/mammals/: Dog.java  Puppy.java
tests/fixtures/kotlin/: annotations_generics.kt  broken_syntax.kt  companion_and_objects.kt  data_and_sealed.kt  extensions_and_toplevel.kt  hierarchy.kt  line_comment.kt  no_package.kt  plain_block_comment.kt  properties.kt  secondary_ctor.kt  user_service.kt
tests/fixtures/kotlin/multidir/base/: Animal.kt
tests/fixtures/kotlin/multidir/felines/: Cat.kt
tests/fixtures/kotlin/multidir/mammals/: Dog.kt  Puppy.kt
tests/fixtures/lua/: broken_syntax.lua  direct_return.lua  empty.lua  love_callbacks.lua  module_pattern.lua  mt_class.lua  neovim_plugin.lua  nested_names.lua  requires_and_attrs.lua  strings_and_comments.lua
tests/fixtures/markdown/: article.md  decorated_headings.md  empty.md  grep_noise.md  readme_style.md  setext_and_codes.md
tests/fixtures/php/: bracketed_namespaces.php  broken_syntax.php  grouped_imports.php  legacy_includes.php  line_comment.php  multi_var_property.php  no_namespace.php  readonly_class.php  repository.php  status_enum.php  traits_and_attributes.php  user_service.php
tests/fixtures/python/: async_service.py  broken_syntax.py  decorators_edge.py  domain_model.py  hierarchy.py
tests/fixtures/ruby/: Gemfile  Rakefile  broken.rb  edge_cases.rb  nested_modules.rb  nested_modules_with_siblings.rb  operators.rb  qualified_module.rb  user.rb  visibility.rb
tests/fixtures/rust/: broken_syntax.rs  comments_edge.rs  cross_file_impl.rs  edge_cases.rs  enum_advanced.rs  extern_block.rs  generics.rs  hierarchy.rs  modules.rs  unions_and_macros.rs  user_service.rs  visibility_matrix.rs
tests/fixtures/scala/: braced_package.scala  broken_syntax.scala  companion_and_objects.scala  data_and_sealed.scala  extensions_and_toplevel.scala  hierarchy.scala  line_comment.scala  no_package.scala  package_object.scala  plain_block_comment.scala  scala3_features.scala  user_service.scala
tests/fixtures/scala/multidir/base/: Animal.scala
tests/fixtures/scala/multidir/felines/: Cat.scala
tests/fixtures/scala/multidir/mammals/: Dog.scala  Puppy.scala
tests/fixtures/scss/: _components.scss
tests/fixtures/sql/: broken.sql  extensions.sql  functions.sql  migration.sql  multi_statement.sql  mysql_dialect.sql  pg_partitioning_and_modifiers.sql  procedures_and_domains.sql  quoted_identifiers.sql  schema.sql  sqlite_dialect.sql  views.sql
tests/fixtures/typescript/: broken_syntax.ts  decorators.ts  hierarchy.ts  plain_module.js  react_page.tsx  storage_service.ts  types.ts  visibility.ts
tests/fixtures/yaml/: anchors_aliases.yaml  app_config.yaml  block_scalars.yaml  broken_syntax.yaml  dotted_keys.yaml  github_workflow.yaml  grep_noise.yaml  helm_templated.yaml  k8s_deployment.yaml  k8s_multi_resources.yaml  openapi_mini.yaml  seq_id_fallback.yaml
tests/unit/: test_cli.py  test_core_renderers.py  test_core_search.py  test_cpp_adapter.py  test_csharp_adapter.py  test_css_adapter.py  test_digest_format.py  test_digest_format_presets.py  test_go_adapter.py  test_grep.py  test_header_enrichment.py  test_ignore_filtering.py  test_imports.py  test_java_adapter.py  test_kotlin_adapter.py  test_lua_adapter.py  test_markdown_adapter.py  test_php_adapter.py  test_prompt_command.py  test_python_adapter.py  test_ruby_adapter.py  test_rust_adapter.py  test_scala_adapter.py  test_scss_adapter.py  test_setup_prompt_command.py  test_sql_adapter.py  test_typescript_adapter.py  test_yaml_adapter.py
