[project]
name = "ast-outline"
version = "0.6.3"
description = "AST-based structural outline for source files (C#, Python, TypeScript/JavaScript, Java, Kotlin, Scala, Go, Rust, PHP, Markdown, YAML) — tree-sitter-powered, LLM-agent-first. Complement to ast-grep: ast-grep searches, ast-outline overviews."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dmitrii Zaitsev", email = "d.zayceff@gmail.com" },
    { name = "ast-outline contributors" },
]
keywords = [
    "ast",
    "ast-grep",
    "tree-sitter",
    "outline",
    "llm",
    "coding-agent",
    "csharp",
    "python",
    "typescript",
    "javascript",
    "java",
    "kotlin",
    "scala",
    "go",
    "golang",
    "rust",
    "php",
    "markdown",
    "yaml",
    "kubernetes",
    "openapi",
    "code-navigation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=1.1",
    "tree-sitter-scala>=0.24",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-markdown>=0.3",
    "tree-sitter-yaml>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://ast-outline.github.io/"
Documentation = "https://ast-outline.github.io/"
Repository = "https://github.com/ast-outline/ast-outline"
Issues = "https://github.com/ast-outline/ast-outline/issues"
Changelog = "https://github.com/ast-outline/ast-outline/blob/main/CHANGELOG.md"

[project.scripts]
ast-outline = "ast_outline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ast_outline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/LICENSE-MIT",
    "/LICENSE-DOCS",
    "/NOTICE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
